# hello-wold

./: .clang-format  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: cmake-multi-platform.yml
format/: clang-format-patch.sh
tests/: main.cpp
tests/src/: test_Addition.cpp
